# midterm-project-ml-zoomcamp

./: README.md  fly.toml  notebook.ipynb  predict.py  pyproject.toml  test.py  train.py
