[project]
name = "midterm-project-ml-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "h3>=4.3.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "fastapi>=0.121.2",
    "geopandas>=1.1.1",
    "h3>=4.3.1",
    "kagglehub[pandas-datasets]>=0.3.13",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
